syntax = "proto3";

option go_package="./;pb";

message FileProducer {
    string fileName = 1;
    string fileUrl  = 2;
    string fileStatus  = 3;
}